@@ -27,6 +27,11 @@ OpenDNSSEC 2.2 - 2017-xx-xx
                   the same zone back again.
 * SUPPORT-215:    Notify the signer after a zone was deleted.
 
+OpenDNSSEC 2.1.6 - 2019-12-??
+
+* OPENDNSSEC-913: verify databasew connection upon every use.
+* OPENDNSSEC-944 regression bug date next transition
+
 OpenDNSSEC 2.1.5 - 2019-11-05
 
 * SUPPORT-245: Resolve memory leak in signer introduced in 2.1.4.
